crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@320.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_mul VALUES (7,4,'-4364411947278810125327066890819882483326918.05664098958260550284395870948992407314161088028674246708928421994893923699743452802989464864039994566042797942433140378990308345483670828497915478397481687305406460330009319949623844175096007381662809083363069100235985794575399268709260901964834244796150883807308976949196661411035264619638771824190014274817662519438658481432363824187693821267613212631153175155634316128036152465184903927860719447693468054624663668062006049759837326188252927823612718163916100588143128358998656306593393889422386501730237442526450419990376323903182669190482615734972147533221144682538647497701130447816148459762464395194383090936159579764712919396391813914821973715879062992249315474841639591907249142779103650773383644785606333916967894');"
---
InsertStmt@0..807
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_mul"
  Whitespace@23..24 " "
  SelectStmt@24..805
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..805
      AConst@32..33
        Iconst@32..33 "7"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "4"
      Ascii44@35..36 ","
      AConst@36..805
        Sconst@36..805 "'-4364411947278810125 ..."
  Ascii41@805..806 ")"
  Ascii59@806..807 ";"

